--- a/.github/workflows/python-app.yaml
+++ b/.github/workflows/python-app.yaml
@@ -22,8 +22,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pylint pytest
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        if [ -f requirements-dev.txt ]; then pip install -r requirements-dev.txt; fi
     - name: Lint with pylint
       run: |
         pylint src/ tests/ --fail-under=8.0
