--- a/.github/workflows/docker-publish.yaml
+++ b/.github/workflows/docker-publish.yaml
@@ -68,3 +68,12 @@ jobs:
           TAGS: ${{ steps.meta.outputs.tags }}
           DIGEST: ${{ steps.build-and-push.outputs.digest }}
         run: echo "${TAGS}" | xargs -I {} cosign sign --yes {}@${DIGEST}
+
+      - name: Checkov Dockerfile
+        uses: bridgecrewio/checkov-action@99bb2caf247dfd9f03cf984373bc6043d4e32ebf # v12.1347.0
+        with:
+          quiet: true
+          soft_fail: true
+          docker_image: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          dockerfile_path: ./Dockerfile
+          container_user: 10001
