--- a/.github/workflows/docker-publish.yaml
+++ b/.github/workflows/docker-publish.yaml
@@ -2,7 +2,7 @@ name: Docker
 
 on:
   push:
-    branches: [ main, github-actions ]
+    branches: [ '*' ]
     tags: [ 'v*.*.*' ]
   pull_request:
     branches: [ main ]
